syntax = "proto3";
package lottery.lottery;

option go_package = "lottery/x/lottery/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";


message SystemInfo {
  uint64 nextId = 1;
  cosmos.base.v1beta1.Coin fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  cosmos.base.v1beta1.Coin minBet = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  cosmos.base.v1beta1.Coin maxBet = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64 betCount = 5;
}
